ficha catalo e isbn

--- a/content/ficha-tecnica.html
+++ b/content/ficha-tecnica.html
@@ -33,6 +33,31 @@
 				        <dt>Autores</dt>
 				        <dd>Fábio Venturoli</dd>
 				    </dl>
+
+			    	<section class="ficha-catalografica">
+			            <h2 class="titulo">Dados Internacionais de Catalogação na Publicação <span>(CIP) GPT/BC/UFG</span></h2>
+			            
+			            <div class="codigo-e-dados">
+				            <p class="codigo">V448i</p>
+				            <div class="dados">
+				            	<p>Venturoli, Fábio<br>
+			            		Inventário florestal /  Fábio Venturoli. . –  Dados eletrônicos. -  Goiânia : Gráfica  da UFG, 2018.<br>
+				            	21 p. il., figs.</p>
+				            	         
+
+				            	<p>Projeto Editorial: Centro Integrado de Aprendizagem em Rede - Ciar Ufg<br>
+			            		Modo de acesso: World Wide Web: <a href="https://producao.ciar.ufg.br/ebooks/inventario-florestal/">https://producao.ciar.ufg.br/ebooks/inventario-florestal/</a><br>
+			            		Título da página da Web (acesso em 27 jul. 2018).<br>
+			            		Inclui referências.</p>
+
+		            	        <p>ISBN: 978-85-495-0228-5</p>
+
+		            	        <p>1. Levantamentos florestais .  2. Florestas - Medição.  3. Comunidades vegetais.  I. Título.</p>
+	                           <p class="cdu">CDU: 630*113</p>
+
+				            </div>
+			            </div>
+			    	</section>
 				</div>
 				<div class="coluna">
 				    <dl>
